Implementação dos Filtros no Vue
Implementação dos Filtros no Vue e Implementação da página Manutenção no Vue também.

--- a/web/public/patrimonio.html
+++ b/web/public/patrimonio.html
@@ -25,7 +25,7 @@
       font-style: none;
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: left;
       background-color: #ffffff;
       cursor: pointer;
       padding: 15px;
@@ -189,7 +189,7 @@
 
     <div class="ui container table-p">
       <div class="ui stackable grid">
-        <div class="four wide column" style="margin-top: 30px;">
+        <div class="five wide column" style="margin-top: 30px;">
           <div class="ui vertical menu">
             <div class="header item">
               Filtros
@@ -300,7 +300,7 @@
           </div>
         </div>
 
-        <div class="twelve wide column" style="margin-top: 30px;">
+        <div class="eleven wide column" style="margin-top: 30px;">
           <table class="ui compact celled definition table">
             <thead>
               <tr>
