Implementação de Telas

--- a/web/public/chamada.html
+++ b/web/public/chamada.html
@@ -48,6 +48,16 @@
         </table>
       </div>
     </div>
+    <div class="ui inverted vertical footer segment">
+      <div class="ui container">
+        <div class="ui stackable inverted divided equal height stackable grid">
+          <div class="sixteen wide column">
+            <p class="ui inverted right aligned segment">© 2023 Todos os direitos reservados.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     <script src="script.js"></script>
