--- a/web/public/home.html
+++ b/web/public/home.html
@@ -12,6 +12,9 @@
   <script src="../src/assets/semantic/semantic.min.js"></script>
   <link rel="stylesheet" href="../src/assets/home.css">
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+  <script type="module" src="../src/assets/session.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 </head>
 
 <body>
