--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./src/assets/semantic/semantic.min.css">
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="./src/assets/main.css">
-  <script type="module" src="../src/assets/login.js"></script>
+  <script src="../src/assets/login.js"></script>
     <script type="module" src="../src/assets/session.js"></script>
     <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
     <meta name="google-signin-client_id"
