--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="./src/assets/semantic/semantic.min.css">
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="./src/assets/main.css">
-  <script src="../src/assets/login.js"></script>
   <script type="module" src="../src/assets/session.js"></script>
   <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
   <meta name="google-signin-client_id"
@@ -20,6 +19,9 @@
   <script src="https://unpkg.com/jwt-decode@3.1.2/build/jwt-decode.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/apexcharts@3.28.1/dist/apexcharts.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/CSSPlugin.min.js"></script>
+
 </head>
 
 <body>
