--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./src/assets/semantic/semantic.min.css">
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="./src/assets/main.css">
-  <script type="module" src="../src/assets/session.js"></script>
+  <!-- <script type="module" src="../src/assets/session.js"></script> -->
   <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
   <meta name="google-signin-client_id"
     content="1090697719532-djuhtf5mi9r69ci55jr16ib9hg9ssnbc.apps.googleusercontent.com">
