--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Parque Computacional</title>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
