--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
   <meta name="google-signin-client_id"
     content="1090697719532-djuhtf5mi9r69ci55jr16ib9hg9ssnbc.apps.googleusercontent.com">
   <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
 </head>
 
 <body>
