--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
   <!-- <script type="module" src="../src/assets/session.js"></script> -->
   <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
   <meta name="google-signin-client_id"
-    content="1090697719532-djuhtf5mi9r69ci55jr16ib9hg9ssnbc.apps.googleusercontent.com">
+    content="YOUR_CLIENT_ID">
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
